--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
         const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQo2BxOOJdUmyi011-Q_rp4qdhVWhlPwaLOY1w9SlF_ndXFMru56laZrA6puKff-Q/pub?gid=356196305&single=true&output=csv';
         
         // TODO: Replace with your Google Apps Script Web App URL
-        const APPS_SCRIPT_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwiP1jMNNrcHlZjI_UGeI1tNKxB4s5lWtm3Ikxy-dWamGtMAIxB6dijI1-qjgAzOLWp/exec';
 
         // State
         let proyectos = [];
@@ -1266,3 +1266,4 @@
     </script>
 </body>
 </html>
+
