--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
         const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSQGloopR7rK5psg-iSixpsIe0acRF_yoCfnHo5DEUQSMbBaIohDXGBJftpl2JBK2_3jXfgDVT8kT75/pub?gid=356196305&single=true&output=csv';
         
         // TODO: Replace with your Google Apps Script Web App URL
-        const APPS_SCRIPT_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwiP1jMNNrcHlZjI_UGeI1tNKxB4s5lWtm3Ikxy-dWamGtMAIxB6dijI1-qjgAzOLWp/exec';
 
         // State
         let proyectos = [];
