--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="toast" id="toast"></div>
     <script>
         const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSQGloopR7rK5psg-iSixpsIe0acRF_yoCfnHo5DEUQSMbBaIohDXGBJftpl2JBK2_3jXfgDVT8kT75/pub?gid=356196305&single=true&output=csv';
-        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwiP1jMNNrcHlZjI_UGeI1tNKxB4s5lWtm3Ikxy-dWamGtMAIxB6dijI1-qjgAzOLWp/exec';
+        const APPS_SCRIPT_URL = https://script.google.com/macros/s/AKfycbxGSQgwIGFkO1JH5oSn8AZjdaR2NjmdOrVYrV0e5RsyXTRtLvDDSKnBxV4oiV4CKSJn/exec
         const LAYERS = { OPERATIVO: 'OPERATIVO', ESTRATEGICO: 'ESTRATEGICO', AMBOS: 'AMBOS' };
         const DEFAULT_MULTIPLICADOR = 1.25;
         let proyectos = [], bubbleChart = null, layerView = LAYERS.AMBOS;
